--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,9 +2,9 @@
 <% facade.stations.each do |station| %>
   <ul class='station'>
     <h3 class='name'><%= station.name %></h3>
-    <li class='address'><%= station.full_address %></li>
-    <li class='fuel_type'><%= station.fuel_type %></li>
-    <li class='distance'><%= station.distance %></li>
-    <li class='hours'><%= station.hours %></li>
+    <li class='address'><p>Address: <%= station.full_address %></p></li>
+    <li class='distance'><p>Distance: <%= station.distance %></p></li>
+    <li class='fuel_type'><p>Fuel Type: <%= station.fuel_type %></p></li>
+    <li class='hours'><p>Hours: <%= station.hours %></p></li>
   </ul>
 <% end %>
